# hamzah-ka-ai-agent

./: .gitignore  README.md  netlify.toml  package.json  pyproject.toml  railway.scanner.toml  railway.toml
ai-models/alphaquant_ml/: __init__.py
api/alphaquant_api/: main.py
api/alphaquant_api/routes/: health.py  live.py  market.py  signals.py
backtesting/alphaquant_backtest/: __init__.py
config/: .env.example  railway.live.env.example
data-layer/alphaquant_data/: __init__.py
data-layer/alphaquant_data/adapters/: __init__.py  base.py  binance_futures.py  mexc_futures.py  mexc_private.py  mexc_signing.py  rate_limit.py  registry.py  stubs.py
data-layer/alphaquant_data/caching/: __init__.py
data-layer/alphaquant_data/ingestion/: __init__.py
database/: alembic.ini
database/alembic/: env.py
database/alembic/versions/: 0001_initial.py
database/alphaquant_db/: __init__.py  session.py
docker/: Dockerfile.api  docker-compose.cloud.yml  docker-compose.yml
docs/: ALWAYS_ON_NEON.md  ARCHITECTURE.md  DEPLOY_AND_LIVE.md  RAILWAY_SETUP.md  REAL_TRADING.md  RISK_POLICY.md  ROADMAP.md
frontend/: next.config.ts  package-lock.json  package.json
indicators/alphaquant_indicators/: __init__.py
risk-engine/alphaquant_risk/: __init__.py  engine.py  liquidation.py  sizing.py  stops.py
scripts/: check_live_ready.py  demo_trade_idea.py  init_db.py  paper_scanner.py  start_api.sh
shared/alphaquant_shared/: __init__.py  config.py  errors.py  logging.py  types.py
strategies/alphaquant_strategies/: __init__.py
tests/unit/: test_mexc_signing.py  test_neon_config.py  test_news_filter.py
(+35 files in other folders)
